refactor: use log4j2 for logging
Former-commit-id: fa694a50218cd3927957de51c0d55b7194f45186 [formerly 33ad66ebd37a85621609af8adad41d7d1470b346]
Former-commit-id: 32a9e757b1656f2d2118fe93f36e5ef4f767ff72